--- a/index.html
+++ b/index.html
@@ -1033,7 +1033,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="relative mt-8 z-10 bg-gradient-to-r from-slate-900 via-purple-900 to-indigo-900 backdrop-blur-lg shadow-2xl flex-shrink-0">
+    <footer class="relative mt- z-10 bg-gradient-to-r from-slate-900 via-purple-900 to-indigo-900 backdrop-blur-lg shadow-2xl flex-shrink-0">
         <div class="container mx-auto px-6 py-3">
             <div class="text-center">
                 <!-- Name -->
@@ -1552,3 +1552,4 @@
     </div> <!-- End content wrapper -->
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96d62958437685cb',t:'MTc1NDg5ODgzMS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
