--- a/index.html
+++ b/index.html
@@ -1054,7 +1054,7 @@
                         <i class="fab fa-linkedin-in group-hover:animate-bounce"></i>
                         <span>LinkedIn</span>
                     </a>
-                    <a href="https://github.com/aditya-tamgade" target="_blank" 
+                    <a https://github.com/AdityaTamgade" target="_blank" 
                        class="group flex items-center space-x-2 bg-gray-800 hover:bg-gray-900 text-white px-3 py-1 rounded-lg font-bold text-sm transition-all duration-300 transform hover:scale-105">
                         <i class="fab fa-github group-hover:animate-bounce"></i>
                         <span>GitHub</span>
@@ -1552,4 +1552,5 @@
     </div> <!-- End content wrapper -->
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96d62958437685cb',t:'MTc1NDg5ODgzMS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
 
